# liboping

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  config.h.cmake
src/: CMakeLists.txt  Makefile.am  liboping.cpp  liboping.hpp  liboping_internal.hpp
tests/: CMakeLists.txt  tests.cpp
